# ontology-engine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  REPORT.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docker/: init.sql
docs/: agent-sdk.md  api-reference.md  architecture.md  domain-schemas.md  quickstart.md
domain_schemas/: default.yaml  edtech.yaml  finance.yaml
domain_schemas/examples/: actions_edtech.yaml  actions_finance.yaml
migrations/: 002_kinetic_layer.sql
src/ontology_engine/: __init__.py  cli.py
src/ontology_engine/api/: __init__.py  models.py  routes.py  server.py
src/ontology_engine/core/: __init__.py  config.py  errors.py  schema_format.py  schema_registry.py  types.py
src/ontology_engine/events/: __init__.py  notifier.py
src/ontology_engine/fusion/: __init__.py  embeddings.py  entity_resolver.py  gold_builder.py
src/ontology_engine/kinetic/: __init__.py  action_executor.py  action_types.py  audit_trail.py
src/ontology_engine/llm/: __init__.py  base.py  gemini.py  openai.py
src/ontology_engine/sdk/: __init__.py  (+2 more)
tests/: conftest.py  test_action_executor.py  test_action_types.py  test_agent_integration.py  test_api.py  test_audit_trail.py  test_bronze.py  test_config.py  test_embeddings.py  test_engine.py  test_entity_resolver.py  test_extractor.py  test_gold_builder.py  test_gold_repository.py  test_integration.py  test_kinetic_integration.py  test_llm.py  test_notifier.py  test_preprocessor.py  test_registry.py  test_schema.py  test_sdk_client.py  test_seed_entities.py  test_silver_generalization.py  test_types.py  test_validator.py
tests/integration/: __init__.py  conftest.py  test_agent_registry_integration.py  test_bronze_integration.py  test_e2e_pipeline.py  test_gold_integration.py  test_silver_integration.py
(+10 files in other folders)
